Fixed alignment of radio buttons

--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ button:hover span {
 
 .container_radioButton {
 	position: relative;
-	margin: 20px;
+	margin: 2px;
 	overflow: hidden;
 	width: 160px;
 }
@@ -196,7 +196,8 @@ button:hover span {
 	width: 20px;
 }
 
-.entry-label_Right {
+.entry-label {
+	text-align: left;
 	cursor: pointer;
 	margin-top: -3px;
 	padding-right: 40px;
@@ -204,7 +205,7 @@ button:hover span {
 	-moz-user-select: none;
 }
 
-.entry-label_Left {
+.entry-label {
 	cursor: pointer;
 	margin-top: -3px;
 	padding-left: 40px;
@@ -237,7 +238,7 @@ button:hover span {
 }
 
 .hidden:nth-child(3):checked~.highlight {
-	transform: translateY(49.5px);
+	transform: translateY(50px);
 }
 
 .hidden:nth-child(5):checked~.highlight {
